testing/tests/ui/unclosed-nodes.stderr
error: unclosed expression, missing "}}"
 --> <source attribute>:1:1
  |
       1 | {{ expr
         | ^ close to this token
         |
 --> tests/ui/unclosed-nodes.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unclosed expression, missing "}}"
 --> <source attribute>:1:1
  |
       1 | {{ expr
         | ^ close to this token
         |
 --> tests/ui/unclosed-nodes.rs:7:10
  |
7 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unclosed expression, missing "}}"
 --> <source attribute>:1:1
  |
       1 | {{ expr -
         | ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:11:10
   |
11 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: failed to parse template source
 --> <source attribute>:1:10
  |
       1 | {{ expr -}
         |          ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:15:10
   |
15 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unclosed block, missing "%}"
 --> <source attribute>:1:1
  |
       1 | {% let x
         | ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:19:10
   |
19 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unclosed block, missing "%}"
 --> <source attribute>:1:1
  |
       1 | {% let x
         | ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:23:10
   |
23 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unclosed block, missing "%}"
 --> <source attribute>:1:1
  |
       1 | {% let x -
         | ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:27:10
   |
27 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: failed to parse template source
 --> <source attribute>:1:11
  |
       1 | {% let x -%
         |           ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:31:10
   |
31 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unclosed comment, missing "#}"
 --> <source attribute>:1:3
  |
       1 | {# comment
         |   ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:35:10
   |
35 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unclosed comment, missing "#}"
 --> <source attribute>:1:3
  |
       1 | {# comment
         |   ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:39:10
   |
39 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unclosed comment, missing "#}"
 --> <source attribute>:1:3
  |
       1 | {# comment -
         |   ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:43:10
   |
43 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unclosed comment, missing "#}"
 --> <source attribute>:1:3
  |
       1 | {# comment -#
         |   ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:47:10
   |
47 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
